// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grant Information Component  should not break if grant text is not in the record 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-grant-information"
      id="standard-card-grant-information"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-grant-information-header"
            id="standard-card-grant-information-header"
          >
            Grant information
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-grant-information-content"
        data-testid="standard-card-grant-information-content"
        id="standard-card-grant-information-content"
      >
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-0"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-0"
                >
                  National Health and Medical Research Council
                </span>
                
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-0"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-1"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-1"
                >
                  Cancer Council Queensland
                </span>
                <span
                  data-testid="rek-grant-id-1"
                >
                   (
                  1042819
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-1"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-2"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-2"
                >
                  National Breast Cancer Foundation
                </span>
                <span
                  data-testid="rek-grant-id-2"
                >
                   (
                  CG-12-07 | CG-10-04
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grant Information Component  should not break if rek_grant_id is not in the search key 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-grant-information"
      id="standard-card-grant-information"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-grant-information-header"
            id="standard-card-grant-information-header"
          >
            Grant information
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-grant-information-content"
        data-testid="standard-card-grant-information-content"
        id="standard-card-grant-information-content"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-w0cgvk-MuiTypography-root"
          data-testid="rek-grant-text"
          id="grantInformation"
        >
          We thank Jonathan Harris for the provision of DHT and David Miller for technical assistance and Kyle Upton for his critical review of the manuscript. Research was funded by the National Breast Cancer Foundation (NBCF: 2007003445 and CG-12-07) of Australia, the Australian Research Council (ARC: DP0985025), the Cancer Council of Queensland (CCQ: 1026095) and The University of Queensland. DHD was supported by a Collaborative Program Grant from the, National Breast Cancer Foundation [NBCF; CG-08-03]. Institute, Integrative Cancer Biology Program U54CA1113001 (KPN). SLE, JDF, AMS and ED are supported by Fellowships from the NBCF [ID# ECF-10-05, ECF-12-04, ECF-12-12 and ECF-13-04 respectively]. FA is supported by Future Fellowship from the Australian Research Council [ID: FT130101417]. JMWG is funding by a Scientific Fellowship from Breast Cancer Now. MJM and JAB are supported by an Australian Postgraduate Award (APA). AS was supported from NBCF program grant. SJC supported by NHMRC fellowship. Funding to pay the Open Access publication charges for this article was provided by The University of Queensland.
        </p>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-0"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-0"
                >
                  National Health and Medical Research Council
                </span>
                
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-0"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-1"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-1"
                >
                  Cancer Council Queensland
                </span>
                
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-1"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-2"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-2"
                >
                  National Breast Cancer Foundation
                </span>
                
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grant Information Component  should not render component with empty publication 1`] = `<div />`;

exports[`Grant Information Component  should render component 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-grant-information"
      id="standard-card-grant-information"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-grant-information-header"
            id="standard-card-grant-information-header"
          >
            Grant information
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-grant-information-content"
        data-testid="standard-card-grant-information-content"
        id="standard-card-grant-information-content"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-w0cgvk-MuiTypography-root"
          data-testid="rek-grant-text"
          id="grantInformation"
        >
          We thank Jonathan Harris for the provision of DHT and David Miller for technical assistance and Kyle Upton for his critical review of the manuscript. Research was funded by the National Breast Cancer Foundation (NBCF: 2007003445 and CG-12-07) of Australia, the Australian Research Council (ARC: DP0985025), the Cancer Council of Queensland (CCQ: 1026095) and The University of Queensland. DHD was supported by a Collaborative Program Grant from the, National Breast Cancer Foundation [NBCF; CG-08-03]. Institute, Integrative Cancer Biology Program U54CA1113001 (KPN). SLE, JDF, AMS and ED are supported by Fellowships from the NBCF [ID# ECF-10-05, ECF-12-04, ECF-12-12 and ECF-13-04 respectively]. FA is supported by Future Fellowship from the Australian Research Council [ID: FT130101417]. JMWG is funding by a Scientific Fellowship from Breast Cancer Now. MJM and JAB are supported by an Australian Postgraduate Award (APA). AS was supported from NBCF program grant. SJC supported by NHMRC fellowship. Funding to pay the Open Access publication charges for this article was provided by The University of Queensland.
        </p>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-0"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-0"
                >
                  National Health and Medical Research Council
                </span>
                <span
                  data-testid="rek-grant-id-0"
                >
                   (
                  569645 | 1022263
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-0"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-1"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-1"
                >
                  Cancer Council Queensland
                </span>
                <span
                  data-testid="rek-grant-id-1"
                >
                   (
                  1042819
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-1"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-378kpi"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-6ysy4b-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-label-2"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-9 css-3iu82-MuiGrid2-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-2"
                >
                  National Breast Cancer Foundation
                </span>
                <span
                  data-testid="rek-grant-id-2"
                >
                   (
                  CG-12-07 | CG-10-04
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                data-testid="rek-grant-text-2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
